samples/_failures_safe/1761447822_6adbef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c120d915.c: In function ‘main’:
./samples/SAFE/__tmp_c120d915.c:170:13: error: expected declaration or statement at end of input
  170 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_c120d915.c:170:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c120d915.c:170:13: error: expected declaration or statement at end of input
